# auth

./: .gitignore  BUILD  Gopkg.toml  Makefile  WORKSPACE  go.mod  go.sum  kubernetes.yaml  main.go
api/v1alpha1/: auth.kope.io_authproviders.yaml  groupversion_info.go  types.go  zz_generated.deepcopy.go
cmd/auth-api/: BUILD  main.go
cmd/auth-internal/: BUILD  main.go
cmd/auth-portal/: BUILD  main.go
cmd/cli/: BUILD.bazel  create.go  create_token.go  create_user.go  createuser.go  export.go  export_kubecfg.go  main.go  root.go  utils.go
cmd/kauth-internal/: BUILD  main.go
cmd/kauth-portal/: BUILD  main.go
hack/: export_workspace_build.py  update-deps.sh
images/: BUILD
images/auth-server/: Dockerfile
k8s/: authprovider.yaml  core.yaml  ingress.yaml  kauth-portal.yaml  manifest.yaml  portal.yaml  rbac.yaml  resource.yaml
k8s/testvalues/: authprovider.yaml
pkg/api/: BUILD  api.go
pkg/api/apiserver/: BUILD  register_test.go  scheme_test.go  server.go  start.go  utils.go
pkg/api/registry/auth/: BUILD  etcd.go  strategy.go
pkg/api/registry/authconfiguration/: BUILD  etcd.go  strategy.go
pkg/api/registry/authprovider/: BUILD  etcd.go  strategy.go
pkg/api/registry/user/: BUILD  strategy.go
pkg/apis/auth/: BUILD  client.go  doc.go  register.go  types.go  user.go  zz_generated.deepcopy.go
pkg/apis/auth/install/: BUILD  install.go
pkg/apis/auth/v1alpha1/: BUILD  defaults.go  doc.go  register.go  types.go  zz_generated.conversion.go  zz_generated.deepcopy.go  zz_generated.defaults.go
pkg/apis/auth/v1alpha1/client/: BUILD  client.go
pkg/apis/componentconfig/: BUILD  doc.go  register.go  types.go  zz_generated.deepcopy.go
pkg/apis/componentconfig/install/: BUILD  install.go  install_test.go
pkg/apis/componentconfig/v1alpha1/: BUILD  defaults.go  doc.go  register.go  types.go  zz_generated.conversion.go  zz_generated.deepcopy.go  zz_generated.defaults.go
pkg/assert/: BUILD  assert.go
pkg/client/clientset_generated/clientset/: BUILD  BUILD.bazel  clientset.go
pkg/client/clientset_generated/clientset/fake/: BUILD  clientset_generated.go  register.go
pkg/client/clientset_generated/clientset/scheme/: BUILD  register.go
pkg/client/clientset_generated/clientset/typed/config/v1alpha1/: BUILD.bazel  authconfiguration.go  authprovider.go  config_client.go
pkg/client/clientset_generated/clientset/typed/config/v1alpha1/fake/: BUILD.bazel  fake_authprovider.go  fake_config_client.go
pkg/client/clientset_generated/internalclientset/: BUILD  clientset.go
pkg/client/clientset_generated/internalclientset/fake/: BUILD  clientset_generated.go  register.go
pkg/client/clientset_generated/internalclientset/scheme/: BUILD  register.go
pkg/client/clientset_generated/internalclientset/typed/auth/internalversion/fake/: BUILD  BUILD.bazel  fake_auth_client.go  fake_user.go
pkg/client/clientset_generated/internalclientset/typed/auth/v1alpha1/fake/: BUILD  BUILD.bazel  fake_auth_client.go  fake_user.go
pkg/client/clientset_generated/internalclientset/typed/config/internalversion/: BUILD.bazel  authconfiguration.go  authprovider.go  config_client.go  generated_expansion.go
pkg/client/clientset_generated/internalclientset/typed/config/internalversion/fake/: BUILD.bazel  fake_authconfiguration.go  fake_authprovider.go  fake_config_client.go
pkg/cmd/: BUILD.bazel  create_token.go  create_user.go  createuser.go  defaultfactory.go  export_kubecfg.go  factory.go
pkg/config/: interfaces.go  kubernetes.go
pkg/configreader/: BUILD  reader.go  reader_test.go
pkg/cookie/: BUILD  cookies.go  cookies_test.go
pkg/cookie/pb/: BUILD  cookie.proto
pkg/cookie/proto/: cookie.proto
pkg/httpserver/: httpserver.go  mapuser.go
pkg/k8sauth/: BUILD  webhook.go
pkg/keystore/: BUILD  interfaces.go  keystore.go  kubernetes.go  secretbox.go
pkg/keystore/pb/: BUILD  keystore.pb.go  keystore.proto
pkg/kubeconfig/: BUILD.bazel  builder.go  tokens.go  types.go
pkg/oauth/: BUILD  authenticate.go  cookies.go  http.go  providers.go  server.go  state.go
pkg/oauth/pb/: BUILD  cookie.proto  state.pb.go  state.proto
pkg/oauth/providers/: BUILD  default.go  interface.go  interfaces.go  oidcprovider.go
pkg/oauth/providers/factory/: factory.go
pkg/oauth/providers/github/: provider.go
pkg/oauth/providers/google/: BUILD  google.go
pkg/oauth/session/: BUILD  session.go
pkg/oauth2proxy/: BUILD  htpasswd.go  oauthproxy.go  options.go  templates.go  version.go
pkg/portal/: BUILD  http.go  kubeconfig.go  login.go  logout.go  map_user.go  oauth.go  options.go  portal.go  rest.go
pkg/providers/: BUILD  azure.go  azure_test.go  facebook.go  github.go  gitlab.go  gitlab_test.go  google.go  google_test.go  internal_util.go  internal_util_test.go  linkedin.go  linkedin_test.go  myusa.go  myusa_test.go  provider_default.go  provider_default_test.go  providers.go  session_state.go  session_state_test.go
pkg/session/: session.go
pkg/session/pb/: cookie.pb.go  cookie.proto
pkg/tokenstore/: BUILD  api.go  interface.go  secrets.go  tokenrecord.go  tpr.go
pkg/util/: BUILD  api.go  api_test.go
webapp/portal/: BUILD  package-lock.json  package.json  webpack.config.js
webapp/portal-old/: package.json
webapp/portal-old/examples/: config  nologin.html  server.py  settings.html
webapp/portal-old/public/: .gitignore
webapp/portal-old/src/client/app/api/: AuthConfigurations.js  AuthProviders.js  Kubernetes.js  KubernetesTypeWrapper.js
webapp/portal-old/src/client/app/components/: AdminSettingsComponent.jsx  AuthProviderListComponent.jsx  FormComponent.jsx  (+1 more)
webapp/portal/examples/: index.html
webapp/portal/public/: index.html
webapp/portal/src/: App.css  App.js  index.js
webapp/portal/src/api/: AuthConfigurations.js  AuthProviders.js  Kubernetes.js  KubernetesTypeWrapper.js
webapp/portal/src/client/app/: index.jsx
webapp/portal/src/components/: AuthConfigurationEditComponent.jsx  AuthProviderEditComponent.jsx  AuthProviderListComponent.jsx  FormComponent.jsx  UserComponent.css  UserComponent.jsx
webapp/portal/src/pages/config/: index.jsx
(+57 files in other folders)
