load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "createuser.go",
        "defaultfactory.go",
        "factory.go",
    ],
    importpath = "kope.io/auth/pkg/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/client/clientset_generated/clientset:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
    ],
)
