load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "create_token.go",
        "create_user.go",
        "defaultfactory.go",
        "export_kubecfg.go",
        "factory.go",
    ],
    importpath = "kope.io/auth/pkg/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/auth/v1alpha1:go_default_library",
        "//pkg/client/clientset_generated/clientset:go_default_library",
        "//pkg/kubeconfig:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
    ],
)
