load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config_client.go",
        "doc.go",
        "generated_expansion.go",
    ],
    importpath = "kope.io/auth/pkg/client/clientset_generated/internalclientset/typed/config/internalversion",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/client/clientset_generated/internalclientset/scheme:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)
