load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "fake_config_client.go",
    ],
    importpath = "kope.io/auth/pkg/client/clientset_generated/internalclientset/typed/config/internalversion/fake",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/client/clientset_generated/internalclientset/typed/config/internalversion:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/testing:go_default_library",
    ],
)
